--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-fastapi==0.111.0
-pydantic==2.7.0
-requests==2.32.0
-mcp==0.1.0
-uvicorn==0.26.1
-
-
-
+fastapi>=0.116.1
+fastmcp>=2.12.2
+mcp[cli]>=1.13.1
+requests>=2.32.5
+uvicorn>=0.35.0
